--- a/index.html
+++ b/index.html
@@ -24,6 +24,35 @@
             <img src="images/img1.png">
             <button class="button">Buy now</button>
         </div>
+        <div class="row">
+            <div class="box">
+              <img src="assets/images/1.png" />
+              <div class="product">
+              <h2>Product 1</h2>
+              <p>This is the description of the product.</p>
+              <h3>Rs 230</h3>
+              <button>Add to Cart</button>
+            </div>
+            </div>
+            <div class="box">
+              <img src="assets/images/2.png" />
+              <div class="product">
+              <h2>Product 2</h2>
+              <p>This is the description of the product.</p>
+              <h3>Rs 200</h3>
+              <button>Add to Cart</button>
+              </div>
+            </div>
+            <div class="box">
+              <img src="assets/images/3.png" />
+              <div class="product">
+              <h2>Product 3</h2>
+              <p>This is the description of the product.</p>
+              <h3>Rs 375</h3>
+              <button>Add to Cart</button>
+              </div>
+            </div>
+          </div>
     </div>
 </body>
 </html>
